# dotfiles

./: .gitconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  Makefile  README.md  install.sh  setup
.github/: copilot-instructions.md
ahk/: .dirdesc  ahk.sh  chrome_focus.ahk  dev_shortcuts.ahk  hotstrings.ahk  quick_google.ahk  run_as_admin.ps1  teams_toggle.ahk  vscode_toggle.ahk  windows_terminal_toggle.ahk
ahk_shortcuts/: ahk.sh  dev_shortcuts.ahk
aws/: .dirdesc  bin.sh  create_static_website_with_s3.sh  notes.md
bash/: .aliases  .apt  .apt_packages  .aws  .curl_installs  .envvars  .functions  .git_init  .golang_install  .language_config  .npm  .npm_init  .pipx_setup  .pyenv  .python_setup  .ruff.toml  .scripts  ol.sh  profile.sh
bashrc/: default.bashrc  setup_bashrc.sh
cht/: .cht_sh_index  cht.sh
config/: .aliases  .aws  .bash_aliases  .bashrc  .dirdesc  .envvars  .eslintrc  .functions  .gitconfig  .gitignore_global  .gnome  .inputrc  .ruff.toml  .tmux.conf  lazygit.yml  profile.sh  starship.toml
cron/: aws-azure-login.sh  jobs.crontab
install/: .bash  .dirdesc  .golang  .node  .python  .rust  bash.sh  git_bash.sh  gnome.sh  golang.sh  lazygit.sh  node.sh  nvim.sh  pyenv.sh  python.sh  reset_komo.ps1  rust.sh  this_repo.sh  windows.ps  wsl_fonts.sh
nvim/: .dirdesc  init.lua  init.lua.python  init.python.lua  lazy-lock.json  notes.txt
pass/: .dirdesc  .gpg-id
path_scripts/: cdp  google.sh  pr.sh  source_all.sh
project_manager/: .dirdesc  .envrc  .gitignore  HABITS_DESIGN.md  README.md  deploy_pythonanywhere.sh  main.py  pyproject.toml  test_main.py
project_manager/project_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
project_manager/scripts/: update_readme.py
project_manager/src/gtd/: __init__.py  actions.py  api.py  cli.py  gtd.py  gtd_tui.py  habits_tui.py  models.py  storage.py  tui.py  ui.py  views.py
project_manager/src/gtd/notion/: __init__.py  capture.py  client.py  commands.py  config.py  display.py  entries.py  habits.py  habits_models.py  init.py  log.py  models.py  review.py  schema.py  today.py  triage.py
project_manager/src/project_manager/: __init__.py  actions.py  cli.py  gtd.py  storage.py  ui.py  views.py
project_manager/src/project_manager/notion/: capture.py  client.py  commands.py  display.py  init.py  models.py  triage.py
project_manager/tests/: api_test.py  test_areas_cli.py  test_cli.py  test_gtd_tui.py  test_habits.py  test_models.py  test_notion.py  test_steps.py  test_storage.py  test_tui.py  test_ui.py  test_views.py
references/: .dirdesc  llm-rules.md  media.md  (+1 more)
(+66 files in other folders)
