[project]
name = "project-manager"
version = "0.1.0"
description = "A CLI Implementation of the 12-Week Year Planning Method"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.13.4", "python-dateutil>=2.9.0.post0"]


[project.scripts]
pm = "main:main"


[tool.ruff]
extend = "../config/.ruff.toml"
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "S311",
    "S101",
    "I001",
    "S113",
    "PLR0913",
    "COM812",  # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ANN201", "PLR2004"]

[dependency-groups]
dev = ["pytest>=9.1.1"]
