[project]
name = "project-manager"
version = "0.1.0"
description = "A CLI Implementation of the 12-Week Year Planning Method"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.0", "httpx>=0.28.0", "pydantic>=2.13.4", "python-dateutil>=2.9.0.post0"]


[project.scripts]
pm = "project_manager.cli:main"
gtd = "project_manager.gtd:main"


[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
extend = "../config/.ruff.toml"
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "S311",
    "S101",
    "I001",
    "S113",
    "PLR0913",
    "COM812",  # conflicts with formatter
    "FBT001",  # click uses bool positional args by design
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ANN201", "PLR2004", "ANN001", "ARG002", "PT019"]
"tests/**" = ["ANN201", "PLR2004", "ANN001", "ARG002", "PT019"]

[dependency-groups]
dev = ["pytest>=9.1.1"]
